--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "build": "webpack --progress --colors"
+    "build": "webpack --progress --colors",
+    "serve": "npm run build && npm start"
   },
   "keywords": [
     "tic",
